tests/format/link/invalid/elements/link-with-dependencies.bst
kind: link

depends:
- base-file.bst

config:
  target: base-file.bst
